[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = molecule-glesys
url = https://github.com/glesys/molecule-glesys
project_urls =
    Bug Tracker = https://github.com/glesys/molecule-glesys/issues
    Source Code = https://github.com/glesys/molecule-glesys
description = Molecule GleSYS Plugin :: run molecule tests in GleSYS Cloud
long_description = file: README.md
long_description_content_type = text/markdown
author = Magnus Johansson
author_email = magnus@glesys.se
maintainer = Magnus Johansson
maintainer_email = magnus@glesys.se
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

keywords =
    ansible
    roles
    testing
    molecule
    plugin

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    molecule >= 3.2.0
    pyyaml >= 5.1, < 6

[options.extras_require]
test =
    molecule[test]

[options.entry_points]
molecule.driver =
    glesys = molecule_glesys.driver:GleSYS

[options.packages.find]
where = .
